[package]
name = "push-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = [
    "Harry Bairstow <harry@walletconnect.com>"
]

[features]
multitenant = []

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.6", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

build-info = "0.0"

thiserror = "1.0"

tracing = "0.1"

dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
serde_json = "1.0"

chrono = "0.4"

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "chrono", "macros" ] }

async-trait = "0.1"

uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
serial_test = "2.0"
test-context = "0.1"
lazy_static = "1.4"

[build-dependencies]
build-info-build = "0.0"